// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Disabled WarnButton Should Render 1`] = `
<button
  className="warn__Button-sc-5cg2rp-0 igPCTW"
  disabled={true}
  onClick={null}
  type="submit"
>
  <span>
    Disabled
  </span>
</button>
`;

exports[`WarnButton Should Render 1`] = `
<button
  className="warn__Button-sc-5cg2rp-0 igPCTW"
  disabled={false}
  onClick={null}
  type="submit"
>
  <span>
    Login
  </span>
</button>
`;
